k8s_ingress_nginx/simple_nginx/deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: golang-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
        - name: golang-app
          image: golang-app
          resources:
            requests:
              cpu: "0.5"
            limits:
              cpu: "1"
          imagePullPolicy: Never
          ports:
          - containerPort: 3000
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: python-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: python-app
          imagePullPolicy: Never
          ports:
          - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: golang-svc
spec:
  selector:
    app: golang-app
  ports:
    - protocol: TCP
      port: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: python-svc
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 3000
